<resources>
    <string name="app_name">Save Your Time</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Control Panel</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_history_dashboard">History</string>
    <string name="back_label">Back</string>
    <string name="forward_label">Other</string>
    <string name="list_of_permission">List of requested permissions:\n\n<li>Data Usage Access</li></string>
    <string name="close_app_message">Press back again to close the app.</string>
    <string name="delete">delete</string>


    <!-- DASHBOARD -->
    <string name="time_exceeded">Exp.</string>
    <string name="application_label">App</string>
    <string name="time_usage_label">Used</string>
    <string name="time_remaining_label">Remaining</string>
    <string name="apps_empty_caring_message">You will see your statistics here. Click on the control panel to add apps for monitoring.</string>
    <string name="label_table">Summary Table</string>
    <string name="label_chart">Trend Chart</string>

    <!--  SETTINGS -->
    <string name="dialog_reset_title">Are you sure?</string>
    <string name="dialog_reset_description">If you proceed, all your preferences will be reset.</string>
    <string name="control_panel_total_label">Expected daily usage</string>

    <!-- START ACTIVITY -->
    <string name="privacy_disclaimer_prefix" translatable="false">Note</string>
    <string name="privacy_disclaimer">We do not export any personal or usage data outside the internal memory of the phone. No third party interacts with the data collected by the application.</string>
    <string name="allow_button">Allow</string>
    <string name="start_disclaimer">To function properly, the application requires access to usage data.</string>
    <string name="allow_button_notification">Enable Notifications</string>
    <string name="start_disclaimer_notification">To function properly, the application requires enabling basic notifications.</string>
    <string name="allow_button_alarms">Enable Alarms</string>
    <string name="start_disclaimer_alarms">To function properly, the application requires enabling alarms.</string>


    <!-- NOTIFICATIONS -->
    <string name="warn_title_notify_app">Time to log off</string>
    <string name="warn_description_notify_app">Daily limit exceeded for</string>
    <string name="warn_description_notify_app_recheck">You\'re still using the app! Daily limit exceeded for</string>
    <string name="check_notify" translatable="false">check_notify</string>
    <string name="default_notification_channel_id" translatable="false">default_channel_id</string>
    <string name="notification_channel_id" translatable="false">channel_id</string>
    <string name="notification_channel_name">Basic Notifications</string>
    <string name="notification_channel_description">Notifications about time spent on applications</string>
    <string name="notification_service_channel_id" translatable="false">service_channel_id</string>
    <string name="notification_service_title">Save Your Time is running</string>
    <string name="notification_service_description">Click here for details</string>
    <string name="notification_service_channel_description">Notification shown when the service is active</string>
    <string name="notification_service_channel_name">Service Notifications</string>

    <!-- PREFERENCES -->
    <string name="section_block_app_label">Block preferences</string>
    <string name="section_block_app_label_stay_tuned">Stay tuned!</string>
    <string name="section_block_app_option">Block apps when time expires</string>
    <string name="section_notification_app_label">Notification preferences</string>
    <string name="section_notification_app_option_enabled">Enable reminder at expiration</string>
    <string name="section_notification_app_option">The minutes after which you will receive the reminder upon expiration</string>
    <string name="section_notification_app_option_info">When you reach the time limit, the application will automatically notify you with a single notification. If you enable this option and continue to use your apps after the time has expired, you will continue to receive notifications.</string>
    <string name="section_disclaimer_label">Miscellaneous</string>
    <string name="section_disclaimer_license_option">License</string>
    <string name="section_disclaimer_privacy_option">Privacy</string>
    <string name="section_disclaimer_reset_option">Reset all preferences</string>
    <string-array name="section_notification_app_option_list">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>
    <string name="privacy_url" translatable="false">https://carmelolg.github.io/save-your-time/license</string>
    <string name="license_url" translatable="false">https://raw.githubusercontent.com/carmelolg/save-your-time/master/LICENSE</string>

    <!-- HISTORY -->
    <string name="yesterday">Yesterday</string>
    <string name="history_label">Choose the application</string>
    <string name="history_monthly_chart_label">Monthly trend</string>
    <string name="history_weekly_chart_label">Weekly Trend Chart</string>
    <string name="history_last7days_chart_label">Last 7 Days Trend Chart</string>
    <string name="history_stats_label">Statistics</string>
    <string name="history_stats_label_total_usage">Total Weekly Usage</string>
    <string name="history_stats_label_avg_usage">Usage average</string>
    <string name="history_stats_label_difference_from_yesterday">From Yesterday</string>
    <string name="history_stats_label_difference_from_last_week">From Last Week</string>
    <string name="history_stats_label_total_usage_last7">Total Last 7 Days Usage</string>
    <string name="history_stats_label_avg_usage_last7">Last 7 Days - Usage average</string>
    <string name="history_apps_empty_caring_message">Go back and access the control panel to choose the applications to monitor</string>

    <!-- VARIABLES -->
    <string name="now">TODAY</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

</resources>
