<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/SYTBackgroundColor"
    tools:context=".ui.preferences.PreferencesFragment">

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/section_preferences_stop_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/SYTPanelBackgroundColor"
                        android:padding="@dimen/spacing_medium"
                        android:text="@string/section_block_app_label"
                        android:textColor="?attr/SYTPanelTextColor"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/spacing_medium"
                        android:text="@string/section_block_app_label_stay_tuned"
                        android:textColor="?attr/SYTHighlightColor"
                        android:textSize="@dimen/text_size_low"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/stop_application"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:padding="@dimen/spacing_medium"
                        android:text="@string/section_block_app_option"
                        android:textColor="?attr/SYTColorPrimary"
                        android:textSize="@dimen/text_size_default" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/section_preferences_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/SYTPanelBackgroundColor"
                        android:padding="@dimen/spacing_medium"
                        android:text="@string/section_notification_app_label"
                        android:textColor="?attr/SYTPanelTextColor"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/enable_reminder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/spacing_medium"
                        android:text="@string/section_notification_app_option_enabled"
                        android:textColor="?attr/SYTColorPrimary"
                        android:textSize="@dimen/text_size_default" />

                    <LinearLayout
                        android:id="@+id/reminder_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/spacing_medium">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/section_notification_app_option"
                            android:textColor="?attr/SYTColorPrimary"
                            android:textSize="@dimen/text_size_default" />

                        <ImageView
                            android:id="@+id/info_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/section_notification_app_option_info"
                            android:padding="@dimen/spacing_small"
                            android:src="@drawable/ic_info"
                            app:tint="?attr/SYTColorSecondary" />

                        <Spinner
                            android:id="@+id/reminder_time_choice"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:backgroundTint="?attr/SYTColorPrimary"
                            android:clickable="false"
                            android:padding="@dimen/spacing_small"
                            android:spinnerMode="dropdown" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/section_disclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/SYTPanelBackgroundColor"
                        android:padding="@dimen/spacing_medium"
                        android:text="@string/section_disclaimer_label"
                        android:textColor="?attr/SYTPanelTextColor"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/license_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/spacing_medium">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/section_disclaimer_license_option"
                            android:textColor="?attr/SYTColorPrimary"
                            android:textSize="@dimen/text_size_default" />

                        <ImageButton
                            android:id="@+id/license_button"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?attr/SYTBackgroundColor"
                            android:clickable="true"
                            android:contentDescription="@string/section_disclaimer_license_option"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_link"
                            app:tint="?attr/SYTColorPrimary" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/privacy_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/spacing_medium">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/section_disclaimer_privacy_option"
                            android:textColor="?attr/SYTColorPrimary"
                            android:textSize="@dimen/text_size_default" />

                        <ImageButton
                            android:id="@+id/privacy_button"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?attr/SYTBackgroundColor"
                            android:clickable="true"
                            android:contentDescription="@string/section_disclaimer_privacy_option"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_link"
                            app:tint="?attr/SYTColorPrimary" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/reset_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/spacing_medium">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/section_disclaimer_reset_option"
                            android:textColor="?attr/SYTColorPrimary"
                            android:textSize="@dimen/text_size_default" />

                        <ImageButton
                            android:id="@+id/reset_button"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?attr/SYTBackgroundColor"
                            android:clickable="true"
                            android:contentDescription="@string/section_disclaimer_privacy_option"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_remove"
                            app:tint="?attr/SYTColorPrimary" />
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/fourth"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
